--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <!-- reemplazar cada archivo de js por cada punto del TP -->
-    <script src="/ejerciciosBasicosJavascript/js/ejercicio9Op2.js"></script>
+    <script src="/JSpractica/js/4-switch()_case.js"></script>
 </body>
 </html>
