--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <!-- reemplazar cada archivo de js por cada punto del TP -->
-    <script src="/js/7-objetos.js"></script>
+    <script src="/js/8- clases.js"></script>
 </body>
 </html>
